# ipl-win-predictor-v2

./: .xdp-.~cleaned.csv-yFkRrl  Dockerfile.python  Dockerfile.rust  Dockerfile.tf  README.md  ipl-win-prediction (1).ipynb  main.ipynb  pipeline.pkl  temp.ipynb  test_tf_server.py
saved_models/1/: fingerprint.pb  saved_model.pb
saved_models/1/variables/: variables.index
saved_models/2/: fingerprint.pb  saved_model.pb
saved_models/2/variables/: variables.index
scraper/: Cargo.toml  build.rs  client.py  pipeline.joblib  pipeline.pkl  prediction_history.csv  score_pb2.py  score_pb2_grpc.py
scraper/proto/: score.proto
scraper/scikit_env/: pyvenv.cfg
scraper/src/: main.rs
