[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prost = "0.12.3"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-types = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
